kubernetes/stackrox-central/components/cnpg/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-stackrox-app
  namespace: stackrox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: stackrox-central-services
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: stackrox
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: stackrox
          podSelector:
            matchLabels:
              app: central
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-stackrox-cluster
  namespace: stackrox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: stackrox-central-services
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: stackrox
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: stackrox
          podSelector:
            matchLabels:
              cnpg.io/cluster: stackrox
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: stackrox
          podSelector:
            matchLabels:
              cnpg.io/cluster: stackrox
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-stackrox-webhook
  namespace: stackrox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: stackrox-central-services
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: stackrox
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - protocol: TCP
          port: 9443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-stackrox-api-server
  namespace: stackrox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: stackrox-central-services
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: stackrox
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-kube-apiserver
          podSelector:
            matchLabels:
              app: openshift-kube-apiserver
      ports:
        - protocol: TCP
          port: 6443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-stackrox-dns
  namespace: stackrox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: stackrox-central-services
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: stackrox
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
          podSelector:
            matchLabels:
              dns.operator.openshift.io/daemonset-dns: default
      ports:
        - protocol: UDP
          port: 5353
        - protocol: TCP
          port: 5353
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-stackrox-monitoring
  namespace: stackrox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: stackrox-central-services
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: stackrox
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-user-workload-monitoring
      ports:
        - protocol: TCP
          port: 9187
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-stackrox-pgdump-ingress
  namespace: stackrox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: stackrox-central-services
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: stackrox
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app: pgdump-cron
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-stackrox-cnpg-operator
  namespace: stackrox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: stackrox-central-services
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: stackrox
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - protocol: TCP
          port: 8000
